--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "ethers": "^5.6.4",
     "express": "^4.18.1",
     "mongoose": "^6.3.1"
