--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "ethers": "^5.6.4",
     "express": "^4.18.1",
+    "js-sha256": "^0.9.0",
     "mongoose": "^6.3.1"
   }
 }
