--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ethers": "^5.6.4",
     "express": "^4.18.1",
     "js-sha256": "^0.9.0",
-    "mongoose": "^6.3.1"
+    "mongoose": "^6.3.1",
+    "nodemon": "^2.0.16"
   }
 }
